--- a/03-task-manager/starter/client/src/components/EditTask.css
+++ b/03-task-manager/starter/client/src/components/EditTask.css
@@ -70,6 +70,7 @@
   flex-direction: column;
   width: 80%;
 }
+
 .EditTaskForm form {
   flex-grow: 1;
 }
@@ -83,8 +84,6 @@
   margin: 10px;
 } 
 
-
-
 .Label {
   width: 75px;
   color: #f5d5e0;
@@ -95,10 +94,10 @@
   display: flex;
   align-items: center;
   width: 100%;
-  flex-grow: 1;
   height: 35px;
   background-color: rgb(209, 209, 209);
   padding: 5px;
+  font-size: 1.1rem;
 }
 
 .InputGroup .InputText {
@@ -108,6 +107,7 @@
   outline: none;
   border: 1px solid #f5d5e0;
   padding: 5px;
+  font-size: 1.1rem;
 }
 
 .InputGroup .InputText:focus {
