--- a/03-task-manager/starter/client/src/components/Task.css
+++ b/03-task-manager/starter/client/src/components/Task.css
@@ -19,6 +19,10 @@
   height: 100%;
 }
 
+.Task p {
+  font-size: clamp(1.2rem, 1.4rem, 1.6rem);
+}
+
 .TaskControl {
   display: flex;
   flex-direction: column;
