--- a/03-task-manager/starter/client/src/components/CreateTask.css
+++ b/03-task-manager/starter/client/src/components/CreateTask.css
@@ -1,25 +1,28 @@
 .SubmitTask {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   flex-direction: column;
   width: 100%;
   height: 100%;
   border: 4px solid rgba(184, 60, 151, 0.5);
-  padding: 20px;
+  padding: 10px;
 }
 
-.SubmitTask h2 {
+/* .SubmitTask h2 {
   color: #f5d5e0;
   text-transform: capitalize;
   margin:0;
   margin-bottom: 15px;
-}
+} */
+
 .SubmitTask form {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
   width: 85%;
+  height: 70%;
+  flex-grow: 1;
 }
 
 .SubmitTask input {
@@ -27,6 +30,7 @@
   width: 50%;
   margin: 0;
   flex-grow: 1;
+  flex-shrink: 0;
   padding: 10px;
   font-size: 1rem;
   border-radius: 0;
@@ -73,4 +77,41 @@
   border: 1px solid #f5d5e0;
   border-left: 0;
   border-collapse: collapse;
+}
+
+.SubmitTask button:disabled {
+  background-color: grey;
+  border: 1px solid grey;
+}
+
+/* duplicate with the same found in EditTask */
+.StatusMessage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 85%;
+  height: 50px;
+  padding: 10px;
+  flex-shrink: 0;
+}
+
+.StatusMessage p {
+  font-size: clamp(1.1rem, 1.2rem, 1.3rem);
+  color: white;
+  margin: 0;
+}
+
+.CharacterCount {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 25px;
+  width: 100%;
+  flex-grow: 1;
+}
+
+.CharacterCount p {
+  color: #f5d5e0;
+  font-size: clamp(1rem,1.1rem, 1.2rem);
+  margin: 0;
 }
