--- a/03-task-manager/starter/client/src/components/EditTask.css
+++ b/03-task-manager/starter/client/src/components/EditTask.css
@@ -17,7 +17,8 @@
   flex-direction: column;
   width: 550px;
   height: 450px;
-  background-color: #7b337d;
+  background-color: #210535;
+  border: 4px solid #7b337d;;
 }
 
 .Title {
@@ -65,13 +66,18 @@
   width: 50px;
 }
 
+.LoaderContainer {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  flex-grow: 1;
+  background-color: transparent;
+}
+
 .EditTaskForm {
   display: flex;
   flex-direction: column;
   width: 80%;
-}
-
-.EditTaskForm form {
   flex-grow: 1;
 }
 
