--- a/03-task-manager/starter/client/src/components/Loader.css
+++ b/03-task-manager/starter/client/src/components/Loader.css
@@ -1,17 +1,11 @@
 .LoaderModal {
   display: flex;
-  position: absolute;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(32, 5, 51, .5);
+  flex-grow: 1;
 }
 
 .LoaderModal img {
-  height: 125px;
+  height: 100px;
+  width: 100px;
 }
