--- a/03-task-manager/starter/client/src/components/Tasks.css
+++ b/03-task-manager/starter/client/src/components/Tasks.css
@@ -4,16 +4,25 @@
   justify-content: center;
   align-items: center;
   width: 80%;
-  margin: 25px;
+  /* margin: 25px; */
 }
 
-.Tasks, .TaskListEmpty {
+.Tasks {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
+}
+
+.TaskListEmpty {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  flex-grow: 1; 
 }
 
 .TaskListEmpty p {
