--- a/03-task-manager/starter/client/src/components/EditTask.css
+++ b/03-task-manager/starter/client/src/components/EditTask.css
@@ -7,7 +7,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(33, 5, 54, .85);
+  background-color: var(--color1_75);
 }
 
 .Modal {
@@ -17,8 +17,8 @@
   flex-direction: column;
   width: 550px;
   height: 450px;
-  background-color: #210535;
-  border: 4px solid #7b337d;;
+  background-color: var(--color1);
+  border: var(--border_color3_2px);
 }
 
 .Title {
@@ -27,7 +27,7 @@
   align-items: center;
   height: 50px;
   width: 100%;
-  background-color: rgb(99, 21, 111);
+  background-color: var(--color1);
 }
 
 .Title h2 {
@@ -37,7 +37,7 @@
   height: 50px;
   flex-grow: 1;
   margin: 0;
-  color: #f5d5e0;
+  color: var(--font_color_light);
 }
 
 .ReturnButton {
@@ -47,7 +47,10 @@
   height: 50px;
   width: 50px;
   cursor: pointer;
-  background-color: rgb(99, 21, 111);
+  /* background-color: var(--color3); */
+  border: var(--border_color3_2px);
+  border-top: 0;
+  border-left: 0;
 }
 
 .ReturnButton img {
@@ -55,7 +58,7 @@
 }
 
 .ReturnButton:hover {
-  background-color: rgba(67, 13, 75);
+  background-color: var(--color3);
 }
 
 .Dummy {
@@ -92,7 +95,7 @@
 
 .Label {
   width: 75px;
-  color: #f5d5e0;
+  color: var(--color5);
   font-size: 1.2rem;
 }
 
@@ -101,23 +104,27 @@
   align-items: center;
   width: 100%;
   height: 35px;
-  background-color: rgb(209, 209, 209);
+  background-color: var(--disabled_color);
   padding: 5px;
   font-size: 1.1rem;
+}
+
+.ID p {
+  color: var(--font_color_dark);
 }
 
 .InputGroup .InputText {
   height: 35px;
   width: 100%;
-  background-color: #f5d5e0;
+  background-color: var(--color5);
   outline: none;
-  border: 1px solid #f5d5e0;
+  border: var(--border_color5);
   padding: 5px;
   font-size: 1.1rem;
 }
 
 .InputGroup .InputText:focus {
-  box-shadow: 0px 0px 25px 0.5px rgba(245, 213, 224, 0.20);
+  box-shadow: var(--input_focus_box_shadow);
 } 
 
 /* position checkbox to the center */
@@ -148,19 +155,23 @@ input.InputCheckbox {
 .Button button {
   height: 100%;
   width: 100%;
-  background-color: #210535;
-  color: #f5d5e0;
+  background-color: var(--color2);
+  border: var(--border_color2);
+  color: var(--color5);
   font-size: 1.2rem;
   cursor: pointer;
+  transition: border-color 0.25s;
 }
 
 .Button button:hover {
-  border: 1px solid #f5d5e0;
+  border: 1px solid var(--color5);
+  color: var(--color5);
 }
 
 .Button button:disabled {
-  background-color: grey;
-  border: 1px solid grey;
+  background-color: var(--disabled_color);
+  border: var(--border_disabled-color);
+  color: var(--font_color_dark);
 }
 
 /* duplicate with create task / shared too  */
@@ -168,15 +179,15 @@ input.InputCheckbox {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 80%;
   height: 50px;
   padding: 10px;
   flex-shrink: 0;
 }
 
 .StatusMessage p {
-  font-size: clamp(1.1rem, 1.2rem, 1.3rem);
-  color: white;
+  font-size: clamp(1.1rem, 1.3rem, 1.5rem);
+  color: var(--font_color_light);
   margin: 0;
 }
 
@@ -189,7 +200,7 @@ input.InputCheckbox {
 }
 
 .CharacterCountEdit p {
-  color: #f5d5e0;
+  color: var(--color5);
   font-size: clamp(1rem, 1.1rem, 1.2rem);
   margin: 0;
 }
