--- a/03-task-manager/starter/client/src/components/Task.css
+++ b/03-task-manager/starter/client/src/components/Task.css
@@ -6,8 +6,9 @@
   align-items: center;
   width: 100%;
   height: 150px;
-  background-color: #f5d5e0;
+  background-color: var(--color5);
   margin: 20px;
+  border: var(--border_color3_2px);
 }
 
 .Task {
@@ -26,6 +27,15 @@
   text-align: justify;
   width: 100%;
   height: 100%;
+  margin: 0;
+}
+
+.Completed {
+  background-color: var(--disabled_color);
+}
+
+.Completed p {
+  text-decoration: line-through;
 }
 
 .TaskControl {
@@ -35,7 +45,6 @@
   align-items: center;
   width: 15%;
   height: 100%;
-  border-left: 2px solid rgba(186, 143, 174, 1);
 }
 
 .ControlElem {
@@ -45,7 +54,8 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
-  background-color: rgba(186, 143, 174, 0.5);
+  background-color: var(--color5);
+  border-left: var(--border_color3_2px);
 }
 
 .ControlElem img {
@@ -54,5 +64,5 @@
 }
 
 .ControlElem:hover {
-  background-color: rgba(186, 143, 174, 1);
+  background-color: var(--color3);
 }
