--- a/03-task-manager/starter/client/src/components/Tasks.css
+++ b/03-task-manager/starter/client/src/components/Tasks.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   width: 80%;
-  /* margin: 25px; */
 }
 
 .Tasks {
@@ -26,6 +25,6 @@
 }
 
 .TaskListEmpty p {
-  color: white;
+  color: var(--font_color_light);
   font-size: clamp(1.2rem, 1.5rem, 1.8rem);
 }
