--- a/03-task-manager/starter/client/src/index.css
+++ b/03-task-manager/starter/client/src/index.css
@@ -1,9 +1,32 @@
-*, *:before, *:after {
-  box-sizing: inherit;
+:root {
+  /* colors: */
+  --color1:rgba(33, 5, 53);
+  --color1_75: rgba(33, 5, 53, 0.75);
+  --color2: rgb(67, 13, 75);
+  --color3: rgb(123, 51, 125);
+  --color3_50: rgb(123, 51, 125, 0.5);
+  --color4: rgb(200, 116, 178);
+  --color5: rgb(245, 213, 224);
+  --color5_50: rgb(245, 213, 224, 0.5);
+  --font_color_light: white;
+  --font_color_dark: black;
+  --font_color_placeholder: rgb(91, 91, 91); 
+  --disabled_color: rgb(166, 162, 162);
+
+  /* borders */
+  --border_color1: 1px solid var(--color1);
+  --border_color2: 1px solid var(--color2);
+  --border_color3: 1px solid var(--color3);
+  --border_color3_2px: 2px solid var(--color3);
+  --border_color4: 1px solid var(--color4);
+  --border_color5: 1px solid var(--color5);
+  --border_disabled-color: 1px solid var(--disabled_color);
+
+  --input_focus_box_shadow: 0px 0px 25px 0.5px rgb(255, 255, 255, 0.25);
 }
 
-:root {
-
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 #root {
@@ -15,36 +38,10 @@
 }
 
 html {
-  height:100%; 
+  height: 100%; 
 }
+
 body {
   margin: 0;
-  min-height:100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-
-/* h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-} */
-
-
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
+  min-height: 100%;
 }
