reworked loader: created separate context, separate obj entries for each loader state

--- a/03-task-manager/starter/client/src/components/CreateTask.css
+++ b/03-task-manager/starter/client/src/components/CreateTask.css
@@ -7,7 +7,13 @@
   height: 100%;
   border: var(--border_color3_2px);
   padding: 10px;
+  position: absolute;
+  top: 0;
+  bottom:0;
+  left: 0;
+  right:0;
 }
+
 
 .SubmitTask form {
   display: flex;
