--- a/03-task-manager/starter/client/src/components/EditTask.css
+++ b/03-task-manager/starter/client/src/components/EditTask.css
@@ -47,7 +47,6 @@
   height: 50px;
   width: 50px;
   cursor: pointer;
-  /* background-color: var(--color3); */
   border: var(--border_color3_2px);
   border-top: 0;
   border-left: 0;
@@ -77,11 +76,24 @@
   background-color: transparent;
 }
 
-.EditTaskForm {
+.LoaderAndFormGroup {
   display: flex;
   flex-direction: column;
   width: 80%;
   flex-grow: 1;
+  position: relative;
+}
+
+.EditTaskForm {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
 }
 
 .InputGroup {
