--- a/03-task-manager/starter/client/src/components/Loader.css
+++ b/03-task-manager/starter/client/src/components/Loader.css
@@ -3,6 +3,10 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+  width: 100%;
+  height: 100%;
+  background-color: var(--border_color1);
+  z-index: var(--z_1);
 }
 
 .LoaderModal img {
