--- a/03-task-manager/starter/client/src/index.css
+++ b/03-task-manager/starter/client/src/index.css
@@ -3,7 +3,7 @@
   --color1:rgba(33, 5, 53);
   --color1_75: rgba(33, 5, 53, 0.75);
   --color2: rgb(67, 13, 75);
-  --color3: rgb(123, 51, 125);
+  --color3: #7b337d;
   --color3_50: rgb(123, 51, 125, 0.5);
   --color4: rgb(200, 116, 178);
   --color5: rgb(245, 213, 224);
@@ -22,6 +22,14 @@
   --border_color5: 1px solid var(--color5);
   --border_disabled-color: 1px solid var(--disabled_color);
 
+  /* z-index top-bottom */
+  --z_1: 1;
+  --z_2: 2;
+  --z_4: 4;
+  --z_6: 6;
+  --z_8: 8;
+  --z_10: 10;
+  
   --input_focus_box_shadow: 0px 0px 25px 0.5px rgb(255, 255, 255, 0.25);
 }
 
