--- a/03-task-manager/starter/client/src/App.css
+++ b/03-task-manager/starter/client/src/App.css
@@ -1,37 +1,37 @@
 .App {
   display: flex;
   align-items: center;
+  justify-content: flex-start; 
   flex-direction: column;
+  overflow: auto;
+  width: 100%;
   height: 100%;
   background-color: var(--color1);
   background-image: url(./assets/svg_background_1.svg);
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
+  scrollbar-gutter: stable both-edges;
 } 
 
 .BackgroundOverlay {
   display: flex;
-  align-items: center;
   justify-content: flex-start; 
   flex-direction: column;
   overflow: auto;
-  width: 800px;
+  width: 100%;
   height: 100%;
-  background-color: var(--color1);
-  border: var(--border_color3_2px);
-  border-top: 0;
-  border-bottom: 0;
-  scrollbar-gutter: stable both-edges; /* prevents layout shift when scrollbar dis/appearing */
 }
 
 .Header {
   width: 100%;
-  height: 200px;
+  height: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
+  background-color: var(--color1);
+  border-bottom: var(--border_color3_2px);
 }
 
 .Header h1 {
@@ -42,8 +42,46 @@
 .CreateTask {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   height: 200px;
+  margin-bottom: 20px;
+  margin-top: 20px;
   flex-shrink: 0;
   position: relative;
+}
+
+/* TABLETS */
+@media (min-width: 768px) {
+  .BackgroundOverlay {
+    width: 80%;
+    background-color: var(--color1);
+    background-color: var(--color1);
+    border: var(--border_color3_2px);
+    border-top: 0;
+    border-bottom: 0;
+  }
+  
+  .CreateTask {
+    height: 250px;
+  }
+}
+
+/* PC */
+@media (min-width: 1366px) {
+
+  .BackgroundOverlay {
+    align-items: center;
+    width: 50%;
+    scrollbar-gutter: stable both-edges; 
+  }
+
+  .Header {
+    height: 200px;
+  }
+
+  .Header h1 {
+
+  }
 }
