--- a/03-task-manager/starter/client/src/components/CreateTask.css
+++ b/03-task-manager/starter/client/src/components/CreateTask.css
@@ -3,17 +3,111 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
+  height: 100%;
+  width: 95%;
+  border: var(--border_color3_2px);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 2.5%;
+  right: 2.5%;
+  background-color: var(--color1);
+}
+
+.SubmitTask form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 95%;
+  height: 100px;
+}
+
+.SubmitTask input {
+  height: 50px;
+  margin: 0;
+  flex-grow: 1;
+  flex-shrink: 0;
+  padding: 5px;
+  font-size: 1rem;
+  outline: none;
+  border: var(--border_color5);
+  background-color: var(--color5);
+  color: var(--color1);
+}
+
+.SubmitTask input:focus {
+  box-shadow: var(--input_focus_box_shadow);
+} 
+
+.SubmitTask input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: var(--font_color_placeholder);
+  opacity: 1; /* Firefox */
+}
+
+.SubmitTask input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: var(--font_color_placeholder);
+}
+
+.SubmitTask input::-ms-input-placeholder { /* Microsoft Edge */
+  color: var(--font_color_placeholder);
+}
+
+.SubmitTask button {
+  width: 75px;
+  height: 50px;
+  background-color: var(--color2);
+  border: var( --border_color5);
+  border-left: 0;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: var(--color5);
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+.SubmitTask button:hover {
+  border: var(--border_color2);
+  border-left: 0;
+}
+
+.SubmitTask button:disabled {
+  background-color: var(--disabled_color);
+  border: var(--border_disabled-color);
+  color: var(--font_color_dark);
+}
+
+
+/* TABLET */
+@media (min-width: 768px) {
+.SubmitTask {
+  justify-content: flex-start;
+}
+
+.SubmitTask form {
+  width: 85%;
+  /* flex-grow: 1; */
+}
+
+.SubmitTask button {
+  width: 100px;
+}
+}
+
+/* .SubmitTask {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   border: var(--border_color3_2px);
   padding: 10px;
   position: absolute;
   top: 0;
-  bottom:0;
+  bottom: 0;
   left: 0;
-  right:0;
+  right: 0;
 }
-
 
 .SubmitTask form {
   display: flex;
@@ -43,16 +137,16 @@
   box-shadow: var(--input_focus_box_shadow);
 } 
 
-.SubmitTask input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+.SubmitTask input::placeholder { Chrome, Firefox, Opera, Safari 10.1+ 
   color: var(--font_color_placeholder);
-  opacity: 1; /* Firefox */
+  opacity: 1;  Firefox 
 }
 
-.SubmitTask input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+.SubmitTask input:-ms-input-placeholder {  Internet Explorer 10-11 
   color: var(--font_color_placeholder);
 }
 
-.SubmitTask input::-ms-input-placeholder { /* Microsoft Edge */
+.SubmitTask input::-ms-input-placeholder {  Microsoft Edge 
   color: var(--font_color_placeholder);
 }
 
@@ -72,7 +166,6 @@
 .SubmitTask button:hover {
   border: var( --border_color2);
   border-left: 0;
-  border-collapse: collapse;
 }
 
 .SubmitTask button:disabled {
@@ -81,34 +174,4 @@
   color: var(--font_color_dark);
 }
 
-/* duplicate with the same found in EditTask */
-.StatusMessage {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 85%;
-  height: 50px;
-  padding: 10px;
-  flex-shrink: 0;
-}
-
-.StatusMessage p {
-  font-size: clamp(1.1rem, 1.2rem, 1.3rem);
-  color: var(--font_color_light);
-  margin: 0;
-}
-
-.CharacterCount {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  height: 25px;
-  width: 100%;
-  flex-grow: 1;
-}
-
-.CharacterCount p {
-  color: var(--color5);
-  font-size: clamp(1rem,1.1rem, 1.2rem);
-  margin: 0;
-}
+*/
