--- a/03-task-manager/starter/client/src/components/Tasks.css
+++ b/03-task-manager/starter/client/src/components/Tasks.css
@@ -1,9 +1,9 @@
 .TasksContainer {
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 80%;
+  width: 100%;
 }
 
 .Tasks {
@@ -12,19 +12,37 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
 }
 
 .TaskListEmpty {
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 80%;
-  flex-grow: 1; 
+  width: 100%;
+  height: 100%;
 }
 
 .TaskListEmpty p {
   color: var(--font_color_light);
   font-size: clamp(1.2rem, 1.5rem, 1.8rem);
 }
+
+/* TABLET */
+@media (min-width: 768px) {
+   /* no changes */
+}
+
+/* PC */
+@media (min-width: 1366px) {
+  .TasksContainer {
+    width: 95%;
+  }
+
+  .TaskListEmpty p {
+
+  }
+}
+
+
+
