--- a/03-task-manager/starter/client/src/index.css
+++ b/03-task-manager/starter/client/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Mina&display=swap'); 
+
 :root {
   /* colors: */
   --color1:rgba(33, 5, 53);
@@ -13,6 +15,28 @@
   --font_color_placeholder: rgb(91, 91, 91); 
   --disabled_color: rgb(166, 162, 162);
 
+  /* font-size */
+  --font_size_header_small: 1.8rem;
+  --font_size_header_medium: 2.2rem;
+  
+  --font_size_edit_task_title_small: 1.6rem;
+  --font_size_edit_task_title_medium: 2rem;
+
+  --font_size_char_count_small: 0.8rem;
+  --font_size_char_count_medium: 1rem;
+
+  --font_size_status_message_small: 1.2rem;
+  --font_size_status_message_medium: 1.4rem;
+
+  --font_size_input_label_small: 1.2rem;
+  --font_size_input_label_medium: 1.4rem;
+  
+  --font_size_input_text_small: 1.1rem;
+  --font_size_input_text_medium: 1.3rem;
+
+  --font_size_button_small: 1.2rem;
+  --font_size_button_medium: 1.4rem;
+  
   /* borders */
   --border_color1: 1px solid var(--color1);
   --border_color2: 1px solid var(--color2);
@@ -29,7 +53,7 @@
   --z_6: 6;
   --z_8: 8;
   --z_10: 10;
-  
+  /* box shadow */
   --input_focus_box_shadow: 0px 0px 25px 0.5px rgb(255, 255, 255, 0.25);
 }
 
@@ -43,6 +67,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Mina', sans-serif;
 }
 
 html {
