--- a/03-task-manager/starter/client/src/components/CreateTask.css
+++ b/03-task-manager/starter/client/src/components/CreateTask.css
@@ -1,7 +1,7 @@
 .SubmitTask {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   flex-direction: column;
   height: 100%;
   width: 95%;
@@ -23,12 +23,13 @@
 }
 
 .SubmitTask input {
-  height: 50px;
+  height: 60px;
   margin: 0;
+  width: 75%;
   flex-grow: 1;
   flex-shrink: 0;
   padding: 5px;
-  font-size: 1rem;
+  font-size: var(--font_size_input_text_small);
   outline: none;
   border: var(--border_color5);
   background-color: var(--color5);
@@ -53,12 +54,11 @@
 }
 
 .SubmitTask button {
-  width: 75px;
-  height: 50px;
+  width: 25%;
+  height: 60px;
   background-color: var(--color2);
   border: var( --border_color5);
   border-left: 0;
-  font-size: 1.2rem;
   font-weight: 500;
   color: var(--color5);
   cursor: pointer;
@@ -76,102 +76,33 @@
   color: var(--font_color_dark);
 }
 
+.SubmitTask button p {
+ font-size: var(--font_size_button_small);
+ margin: 0;
+}
 
 /* TABLET */
 @media (min-width: 768px) {
-.SubmitTask {
-  justify-content: flex-start;
+  .SubmitTask form {
+    width: 95%;
+  }
+
+  .SubmitTask input {
+    font-size: var(--font_size_input_text_medium);
+  }
+  
+  .SubmitTask button {
+    width: 125px;
+  }
+
+  .SubmitTask button p {
+    font-size: var(--font_size_button_medium);
+   }
 }
 
-.SubmitTask form {
-  width: 85%;
-  /* flex-grow: 1; */
+/* PC */
+@media (min-width: 1366px) {
+  .SubmitTask button {
+    width: 100px;
+  }
 }
-
-.SubmitTask button {
-  width: 100px;
-}
-}
-
-/* .SubmitTask {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  border: var(--border_color3_2px);
-  padding: 10px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-.SubmitTask form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 85%;
-  height: 70%;
-  flex-grow: 1;
-}
-
-.SubmitTask input {
-  height: 50px;
-  width: 50%;
-  margin: 0;
-  flex-grow: 1;
-  flex-shrink: 0;
-  padding: 10px;
-  font-size: 1rem;
-  border-radius: 0;
-  outline: none;
-  border: var(--border_color5);
-  background-color: var(--color5);
-  color: var(--color1);
-}
-
-.SubmitTask input:focus {
-  box-shadow: var(--input_focus_box_shadow);
-} 
-
-.SubmitTask input::placeholder { Chrome, Firefox, Opera, Safari 10.1+ 
-  color: var(--font_color_placeholder);
-  opacity: 1;  Firefox 
-}
-
-.SubmitTask input:-ms-input-placeholder {  Internet Explorer 10-11 
-  color: var(--font_color_placeholder);
-}
-
-.SubmitTask input::-ms-input-placeholder {  Microsoft Edge 
-  color: var(--font_color_placeholder);
-}
-
-.SubmitTask button {
-  width: 100px;
-  height: 50px;
-  background-color: var(--color2);
-  border: var( --border_color5);
-  border-left: 0;
-  font-size: 1.2rem;
-  font-weight: 500;
-  color: var(--color5);
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-.SubmitTask button:hover {
-  border: var( --border_color2);
-  border-left: 0;
-}
-
-.SubmitTask button:disabled {
-  background-color: var(--disabled_color);
-  border: var(--border_disabled-color);
-  color: var(--font_color_dark);
-}
-
-*/
