--- a/03-task-manager/starter/client/src/components/Task.css
+++ b/03-task-manager/starter/client/src/components/Task.css
@@ -65,12 +65,10 @@
   background-color: var(--color3);
 }
 
-
 /* TABLET */
 @media (min-width: 768px) {
   .TaskEntry {
     width: 95%;
-    height: 150px;
   }
 
   .ControlElem img {
@@ -79,76 +77,25 @@
   }
 }
 
-
+/* PC */
 @media (min-width: 1366px) {
-  
-.TaskEntry {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-  height: 150px;
-  background-color: var(--color5);
-  margin: 20px;
-  border: var(--border_color3_2px);
-}
+  .TaskEntry {
+    width: 100%;
+  }
 
-.Task {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 85%;
-  height: 100%;
-  word-wrap: break-word;
-  padding: 10px;
-}
+  .Task {
+    width: 90%;
+  }
 
-.Task p {
-  font-size: clamp(1.2rem, 1.4rem, 1.6rem);
-  text-align: justify;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
+  .Task p {
+    font-size: clamp(1.2rem, 1.4rem, 1.6rem);
+  }
 
-.Completed {
-  background-color: var(--disabled_color);
-}
+  .TaskControl {
+    width: 10%;
+  }
 
-.Completed p {
-  text-decoration: line-through;
-}
-
-.TaskControl {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  width: 15%;
-  height: 100%;
-}
-
-.ControlElem {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  background-color: var(--color5);
-  border-left: var(--border_color3_2px);
-}
-
-.ControlElem img {
-  width: 30px;
-  height: auto;
-}
-
-.ControlElem:hover {
-  background-color: var(--color3);
-} 
-
+  .ControlElem img {
+    width: 35px;
+  }
 }
