--- a/03-task-manager/starter/client/src/components/StatusMessage.css
+++ b/03-task-manager/starter/client/src/components/StatusMessage.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 50px;
+  height: 75px;
   flex-shrink: 0;
 }
 
@@ -17,6 +17,17 @@
   color: var(--font_color_light);
   margin: 0;
   letter-spacing: 2px;
+}
+
+
+@media (orientation: landscape) {
+  .Message {
+    height: 30px;
+  }
+  
+  .MessageEdit {
+    height: 30px;
+  }
 }
 
 /* LAPTOP */
